--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
           </h1>
           <div class="cover__description">
             <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
-            <button class="bet-button">сделать ставку</button>
+            <button class="bet-button" type="button">сделать ставку</button>
           </div>
         </section>
         <section class="lots">
           <h2 class="lots__heading">Лоты</h2> 
         <div class="container_lots">
-          <div class="card_lots">
+          <a href=#0 class="card_lots">
             <article class="card card_type_film">
               <div class="overlay"></div>
               <h3 class="card__title">
@@ -60,8 +60,8 @@
                 ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
               </p>
             </article>
-          </div>
-          <div class="card_lots">
+          </a>
+          <a href=#0 class="card_lots">  <!--Обернул карточки в ссылки-->
             <article class="card card_type_book">
               <div class="overlay"></div>
               <h3 class="card__title">
@@ -76,8 +76,8 @@
                 Джойса?
               </p>
             </article>
-          </div>
-          <div class="card_lots">
+          </a>
+          <a href=#0 class="card_lots">
             <article class="card card_type_picture">
               <div class="overlay"></div>
               <h3 class="card__title">
@@ -90,7 +90,7 @@
                 что это — одна из революционных работ Кандинского?
               </p>
             </article>
-          </div>
+          </a>
         </div>
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
         </section>
@@ -104,25 +104,19 @@
             />
           </div>
           <div class="about_content">
-            <h2 class="title_about">ОБ АУКЦИОНЕ</h2>
+            <h2 class="title_about">об аукционе</h2>  <!-- назначил text-transform в css-->
             <div class="about_text">
-              <p class="text_up">
-                Здесь вы не встретите очередное пафосное cобрание невероятно<br />
-                дорогого антиквариата. Наши лоты вообще не должны были
-                попасть<br />ни
-                на один аукцион. Потому что кому нужен дневник
-                девочки-подростка
-                или картина, которую может нарисовать даже ребёнок? Кому
+              <p class="text_container">
+                Здесь вы не встретите очередное пафосное cобрание невероятно
+                дорогого антиквариата. Наши лоты вообще не должны были попасть ни
+                на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому
                 нужны все эти странные вещи, созданные любителями?
               </p>
-              <p class="text_down">
-                Слишком сложные или, наоборот, слишком простые. Опережающие
-                <br />своё время. В пух и прах растерзанные критиками.
-                Непринятые и<br />
-                непонятые. Когда-то они казались просто неудачными. Но,
-                несмотря<br />
+              <p class="text_container">
+                Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками.
+                Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
                 на критику, кажущуюся простоту или сложность, сейчас без этих
-                лотов<br /> невозможно представить современную культуру. Когда в
+                лотов невозможно представить современную культуру. Когда в
                 эти вещи не верил никто, продолжали верить их создатели. И сейчас
                 эти лоты стали культовыми.
               </p>
@@ -132,18 +126,13 @@
       </section>
       </main>
 <footer class="footer">
-      <address>
-        <ul class="address footer_address">
-          <li>
-            <a href="tel.+99995555555">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-          </li>
-          <li class="header__address">
-            наб. Принсенграхт 263-265, Амстердам
-          </li>
-        </ul>
+      <address class="address footter_address">
+        <div>
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span>наб. Принсенграхт 263- 265,<br> Амстердам</span>
+        </div>
+      </address>
       </address>
       <nav class="footer_menu">
         <ul class="footer_menu_links">
