поправил футер и текст

--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
       </section>
       </main>
 <footer class="footer">
-      <address class="address footter_address">
-        <div>
+      <address class="address">
         <a href="tel:+99995555555">+9 999 555 5555</a>
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <span>наб. Принсенграхт 263- 265,<br> Амстердам</span>
-        </div>
+        <span>наб.Принсенграхт 263-265, Амстердам</span>
       </address>
       </address>
       <nav class="footer_menu">
@@ -161,8 +159,7 @@
         <div>
           <a href="#0">
             <img
-              src="./images/pinterest.svg" alt="Пинтерес" class="images_footer"
-            />
+              src="./images/pinterest.svg" alt="Пинтерес" class="images_footer" />
           </a>
         </div>
       </div>
