--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </address>
     </header>
     <main>
-        <section class="cover">
+      <section class="cover">
           <div class="overlay"></div>
           <h1 class="cover_title">
             <span class="aligned-text aligned-text_left">оно</span>
@@ -95,13 +95,9 @@
         <a class="lots__look-more-link" href="#0">посмотреть больше</a>
         </section>
         <section class="about">
-         <div class="about_container">
-          <div class="about_logo">
-            <img
-              src="./images/logo-white.svg"
-              alt="image"
-              class="about_logo_image"
-            />
+          <div class="about_container">
+            <div class="about_logo">
+              <img src="./images/logo-white.svg" alt="image" class="about_logo_image" />
           </div>
           <div class="about_content">
             <h2 class="title_about">об аукционе</h2>  <!-- назначил text-transform в css-->
